# architecture

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile
apps/sandbox/: CMakeLists.txt  Makefile
apps/sandbox/src/: Main.cpp  SandboxLayer.cpp
core/: CMakeLists.txt  Makefile
core/include/Core/Foundation/: Assert.hpp  Log.cpp  Log.hpp
core/include/Core/Graphics/: GraphicsContext.hpp  RenderCommand.hpp
core/include/Core/Platform/: Window.hpp
core/include/Core/Runtime/: Application.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
core/include/Core/Runtime/Events/: Event.hpp  KeyEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
core/src/Core/Graphics/OpenGL/: OpenGLContext.cpp  OpenGLRenderCommand.cpp
core/src/Core/Platform/GLFW/: GLFWWindow.cpp
core/src/Core/Runtime/: Application.cpp
